tests/base/parser/bad/lib/lmodule-library-cid-type-cid-eq-bar-cid-of-cid-transition.scillib
scilla_version 0

library TestLib

type House =
| Kind of String

(* No transitions or procedures in libraries *)

transition a ()
  accept
end
